# rk_gb

./: .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md  build.sh  envsetup.sh  face.txt  release.sh
.github/workflows/: dev-pr-guard.yml  issue-close-sync-dev.yml  issue-repair.yml  issue-runner-preflight.yml
App/: CMakeLists.txt  Common.cpp  Common.h  Inifile.cpp  Inifile.h  Main.cpp  Main.h
App/Encryption/: Encryption.cpp  Encryption.h
App/HttpServer/: HttpServer.cpp  HttpServer.h
App/Manager/: ManagerDefaultConfig.cpp  ManagerDefaultConfig.h
App/Media/: AVManager.cpp  AVManager.h  Alarm.cpp  Alarm.h  AnBaoLightManager.cpp  AnBaoLightManager.h  AnBaoLightManagerLg.cpp  AudioManager.cpp  AudioManager.h  AudioPrompt.cpp  AudioPrompt.h  Camera.cpp  Camera.h  CameraFilter.cpp  CameraFilter.h  IndicatorLight.cpp  IndicatorLight.h  MediaDefaultConfig.cpp  MediaDefaultConfig.h  Record.cpp  Record.h  RecordStorage.h  Siren.cpp  Siren.h  Storage.cpp  Storage.h  VideoEncodeControl.cpp  VideoImageControl.cpp  VideoOsdControl.cpp  VideoOsdControl.h
App/Net/: NetConfigHook.cpp  NetConfigHook.h
App/Onvif/: Onvif.cpp  Onvif.h
App/Pcba/: Pcba.cpp  Pcba.h
App/ProduceNew/: NetWifi.cpp  NetWifi.h  Produce.cpp  Produce.h
App/ProductCof/: ProductCof.cpp  ProductCof.h
App/Protocol/: ProtocolLog.h  ProtocolManager.cpp  ProtocolManager.cpp.bak  ProtocolManager.h  ProtocolService.h
App/Ptz/: Ptz.cpp  Ptz.h
App/QrCode/: ImageReaderSource.cpp  ImageReaderSource.h  QrCode.cpp  QrCode.h  YUVVideoSource.cpp  YUVVideoSource.h  jpgd.cpp  lodepng.cpp  lodepng.h
App/Rtsp/: live_rtsp.cpp  live_rtsp.h
App/RtspServer/: Makefile  rtsp_h264_file  rtsp_pusher  rtsp_server
App/TestModuleV2/: TestModuleV2_Demo.cpp  TestMonitor.cpp  TestMonitor.h
App/Update/: update.cpp
App/Wdt/: Wdt.cpp  Wdt.h
App/WebServer/: mongoose.c  mongoose.h  web_server.c  web_server.h
App/tuya/: Tuya.cpp  Tuya.h  Tuya_common.cpp  Tuya_common.h  tuya_ipc_cloud_storage.cpp  tuya_ipc_doorbell.cpp  tuya_ipc_dp_handler.cpp  tuya_ipc_dp_utils.cpp  tuya_ipc_media_handler.cpp  tuya_ipc_motion_detect.cpp  tuya_ipc_p2p.cpp  tuya_ipc_sd.cpp  tuya_ipc_sdk_simple_start.cpp  tuya_ipc_sdk_upgrade_demo.cpp  tuya_ipc_system_control.cpp  tuya_ipc_wifi.cpp  tuya_ipc_wired.cpp  tuya_main.cpp
Include/: PathDefinition.h
Include/Ble/: Ble.h
Include/Crypto/: crypto.h
Include/ExchangeAL/: AnalyzeExchange.h  CameraExchange.h  CaptureExchange.h  ChainExchange.h  CommExchange.h  Exchange.h  ExchangeKind.h  GUIExchange.h  ManagerExchange.h  MediaExchange.h  NetIPAbilitySet.h  NetIPDeviceInfo.h  NetIPOperation.h  NetPlatform.h  NetWorkExchange.h  StorageExchange.h
Include/HTTP/: Http.h  HttpProtocol.h  HttpString.h
Include/Infra/: APIMutex.h  AutoBuffer.h  CircularQueue.h  File.h  Function.h  FunctionTemplate.h  Guard.h  IPAddress.h  Infra.h  List.h  MsgQue.h  Mutex.h  Packet.h  PacketBuffer.h  PoolAllocator.h  Referable.h  Security.h  Semaphore.h  Signal.h  Signals.h  Singleton.h  Thread.h  Time.h  Timer.h  Types.h  Unicode.h  Wrapper.h
Include/Inirw/: inirw.h
Include/Log/: DebugDef.h  IDebug.h  Log.h
Include/Manager/: ConfigManager.h  Console.h  DevAbility.h  EventManager.h  MagicBox.h  Md5Create.h  Upgrader.h  User.h  UserManager.h
Include/NetIP/: EventQue.h  IDHManage.h  INetIPManage.h  MsgDef.h  NetDef.h  NetIP.h  NetMediaAdapter.h  NodePool.h  TransportClient.h  TransportDef.h  TransportServer.h  ez_sdk_def.h  onvif_sdk_api.h  xm_sdk_api.h
Include/NetService/: IAlarmCenter.h  IArsp.h  IDDNSCli.h  IDHCPCli.h  IDataCenter.h  IFtpCli.h  IHttpd.h  IIPSearch.h  INetInterFace.h  INetState.h  INtp.h  ISmtpCli.h  IUnnp.h  PhoneMsg.h
Include/Squirrel/: squirrel.h
Include/StreamReader/: StreamReader.h
Lib/: .gitignore
Middleware/: CMakeLists.txt
Middleware/libmpp/: CMakeLists.txt
Middleware/libmpp/common/: sample_comm.h
Middleware/libmpp/common/isp2.x/: sample_comm_isp.c  sample_comm_isp.h
Middleware/libmpp/common/isp3.x/: sample_comm_isp.c  sample_comm_isp.h
Middleware/libmpp/libdmc/: libdmc.c
Middleware/libmpp/rkipc/: .gitignore
Middleware/libmpp/rkipc/common/: version.h
Middleware/libmpp/rkipc/common/isp/rv1106/: isp.c  isp.h
Middleware/libmpp/rkipc/common/osd/: font_factory.c  osd.c
Middleware/libmpp/rkipc/common/param/: awb_calib.c  awb_calib.h
Middleware/libmpp/rkipc/common/rockiva/: rockiva.c  rockiva.h
Middleware/libmpp/rkipc/common/socket_server/: server.c
Middleware/libmpp/rkipc/common/system/: system.c
Middleware/libmpp/rkipc/common/tuya_ipc/4.1.1/: tuya_ipc.c
Middleware/libmpp/rkipc/common/tuya_ipc/5.5.29/: tuya_ipc.c
Middleware/libmpp/rkipc/src/rv1106_dual_ipc/: CMakeLists.txt
Middleware/libmpp/rkipc/src/rv1106_dual_ipc/audio/: audio.c  audio.h
Middleware/libmpp/rkipc/src/rv1106_dual_ipc/video/: video.c  video.c-bk  video.h
Middleware/libmpp/src/: Audio.c  Audio_coder.c  Camera.c  Capture.c  Com.c  Flash.c  I2c.c  MW_Common.c  Misc.c  MotionDetect.c  MotionTrack.c  Motor.c  QrCode.c  Sys.c  Wdt.c  Wifi.c
Middleware/libmpp/wifi/: iwlib.c  iwlist.h  myiwlist.c  wireless.h
Package/: CMakeLists.txt
Package/Crypto/: CMakeLists.txt
Package/Crypto/Source/: crypto.c
Package/Manager/: CMakeLists.txt
Package/Manager/Source/: AutoMaintain.cpp  AutoMaintain.h  ConfigManager.cpp  ConfigManager.h  Console.cpp  Console.h  Daylight.cpp  Daylight.h  DefaultConfig.cpp  DefaultConfig.h  Event.cpp  Event.h  Flash.h  MagicBox.cpp  MagicBox.h  Md5.cpp  Md5.h  Upgrader.cpp  Upgrader.h  User.cpp  User.h  UserManager.cpp  UserManager.h
Release/: .gitignore
burntool/: Makefile  burntool.cpp  burntool.h
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
daemon/: Makefile  daemon  daemon.cpp
debuginfo/: 168.pcap
doc/: coredump_debug_guide.md  gb_register_time_sync_todo.md  zero_config_device.md
docs/: GB28181_Config_Manual.md  gat1400_config.md
driver/: RC0240-systemConfig.scf  RC0240_LGV10-systemConfig.scf  product.cof  readme.txt  tty.c
helloagents/: CHANGELOG.md  project.md
packaging/: Makefile
packaging-RC0240_LGV10/: Makefile
(+789 files in other folders)
